--- a/source-code/e-commercial-platform-backend/package.json
+++ b/source-code/e-commercial-platform-backend/package.json
@@ -59,11 +59,18 @@
   },
   "devDependencies": {
     "@loopback/build": "^8.1.1",
-    "source-map-support": "^0.5.21",
+    "@loopback/eslint-config": "^12.0.3",
     "@loopback/testlab": "^4.1.1",
     "@types/node": "^12.20.46",
-    "@loopback/eslint-config": "^12.0.3",
     "eslint": "^8.10.0",
+    "husky": "^7.0.4",
+    "source-map-support": "^0.5.21",
     "typescript": "~4.5.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "commitlint --verbose -E HUSKY_GIT_PARAMS"
+    }
   }
 }
