Section 2 | setup Nodemon

--- a/source-code/e-commercial-platform-backend/package.json
+++ b/source-code/e-commercial-platform-backend/package.json
@@ -33,6 +33,7 @@
     "openapi-spec": "node ./dist/openapi-spec",
     "prestart": "yarn run rebuild",
     "start": "node -r source-map-support/register .",
+    "dev": "nodemon",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
     "rebuild": "yarn run clean && yarn run build"
   },
@@ -64,6 +65,7 @@
     "@types/node": "^12.20.46",
     "eslint": "^8.10.0",
     "husky": "^7.0.4",
+    "nodemon": "^2.0.15",
     "source-map-support": "^0.5.21",
     "typescript": "~4.5.5"
   },
@@ -72,5 +74,14 @@
       "pre-commit": "npm run lint",
       "commit-msg": "commitlint --verbose -E HUSKY_GIT_PARAMS"
     }
+  },
+  "nodemonConfig": {
+    "verbose": true,
+    "watch": [
+      "src",
+      ".env"
+    ],
+    "ext": "ts",
+    "exec": "npm run build && npm start"
   }
 }
