--- a/source-code/e-commercial-platform-backend/package.json
+++ b/source-code/e-commercial-platform-backend/package.json
@@ -56,6 +56,8 @@
     "@loopback/rest": "^11.1.1",
     "@loopback/rest-explorer": "^4.1.1",
     "@loopback/service-proxy": "^4.1.1",
+    "dotenv": "^16.0.0",
+    "loopback-connector-mongodb": "^5.6.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
